Better .button styling in .story Payment method alignment no longer has a margin on the left

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -276,6 +276,9 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     .story a{
         border-bottom: 1px solid #ddd;
     }
+    .story a:not(.button){
+        border-bottom: 1px solid #ddd;
+    }
     .story a:hover{
         border-color: #999;
     }
@@ -361,12 +364,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
     .story blockquote p:last-child{
         margin-bottom: 0;
     }
-
-        /*-----------------------*/
-        /*- BUTTONS IN STORY ----*/
-        .story .button{
-            border-bottom: none;
-        }
 
         /*-----------------------*/
         /*- WP CAPTIONS ---------*/
