--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -832,6 +832,11 @@ p.stars span a:focus{
     #order_review #payment{
         background: #f5f5f5;
     }
+    #order_review .payment_methods{
+        list-style: none;
+        margin: 0;
+    }
+
     #order_review .payment_methods li{
         list-style: none;
         padding: 10px;
